feat - added categories

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="../../Macro-Projects/component-lib-ti/css/components.css" />
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <div class="primary-container">
         <!-- Primary Navigation -->
@@ -28,14 +30,14 @@
             <!-- Nav right -->
             <ul class="nav-main-right nav-main-ul">
                 <li class="nav-main-li">
-                    <a href="./routes/login.html" class="nav-main-item nav-btn-login">Login</a>
+                    <a href="#" class="nav-main-item nav-btn-login">Login</a>
                 </li>
                 <li class="nav-main-li">
-                    <a href="./routes/categories.html" class="nav-main-item nav-btn-login">Categories</a>
+                    <a href="./routes/categories.html" class="nav-main-item">Categories</a>
                 </li>
             </ul>
         </nav>
-        <!-- Primary Navigation Ends --> 
+        <!-- Primary Navigation Ends -->
 
         <!-- Quiz home body -->
 
@@ -44,8 +46,9 @@
                 <h2 class="quiz-body-head">Welcome To Quizznos!</h2>
 
                 <h3 class="quiz-body-subhead">Check you from a wide range of quizzes to test youself with!</h3>
-            
+
                 <a href="./routes/categories.html" class="btn-home-cta btn btn-success-solid">Quizzes! &#8594;</a>
+
             </div>
 
         </div>
@@ -55,21 +58,28 @@
         <footer class="footer">
             <ul class="footer-socials-list">
                 <li>
-                    <a class="footer-links" href="https://www.github.com/tanveertkd" target="_blank"><i class="fab fa-github fa-lg social-icn"></i></a>
+                    <a class="footer-links" href="https://www.github.com/tanveertkd" target="_blank"><i
+                            class="fab fa-github fa-lg social-icn"></i></a>
                 </li>
                 <li>
-                    <a class="footer-links" href="https://www.linkedin.com/in/tanveer-hazarika/" target="_blank"><i class="fab fa-linkedin fa-lg social-icn"></i></a>
+                    <a class="footer-links" href="https://www.linkedin.com/in/tanveer-hazarika/" target="_blank"><i
+                            class="fab fa-linkedin fa-lg social-icn"></i></a>
                 </li>
                 <li>
-                    <a class="footer-links" href="https://twitter.com/HazarikaTanveer" target="_blank"><i class="fab fa-twitter fa-lg social-icn"></i></a>
+                    <a class="footer-links" href="https://twitter.com/HazarikaTanveer" target="_blank"><i
+                            class="fab fa-twitter fa-lg social-icn"></i></a>
                 </li>
-    
+
                 <li>
-                    <a class="footer-links" href="https://tanveerswebsite.netlify.app/" target="_blank"><i class="fas fa-globe fa-lg social-icn"></i></a>
+                    <a class="footer-links" href="https://tanveerswebsite.netlify.app/" target="_blank"><i
+                            class="fas fa-globe fa-lg social-icn"></i></a>
                 </li>
             </ul>
         </footer>
 
     </div>
+
+    <script type="text/javascript" src="./js/signin-signup-modal.js"></script>
 </body>
+
 </html>
