--- a/routes/categories.html
+++ b/routes/categories.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
     <!--TI-UI stylesheet-->
-    <link rel="stylesheet" href="https://ti-ui.netlify.app/css/components.css" />
-    <!-- <link rel="stylesheet" href="../../Macro-Projects/component-lib-ti/css/components.css" /> -->
+    <!-- <link rel="stylesheet" href="https://ti-ui.netlify.app/css/components.css" /> -->
+    <link rel="stylesheet" href="../../../Macro-Projects/component-lib-ti/css/components.css" />
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -32,7 +32,7 @@
                 </li>
                 <li class="nav-main-li">
                     <a href="./routes/cart.html" class="nav-main-item">
-                        <a href="./quizzes/quizzes.html">Categories</a>
+                        <a href="./categories.html">Categories</a>
                     </a>
                 </li>
             </ul>
@@ -42,7 +42,7 @@
         <!-- Quiz home body -->
 
         <div class="quiz-body-container">
-            <h3 class="quiz-body-head">Categories</h3>
+            <h1 class="quiz-body-head">Categories</h1>
 
             <div class="quiz-section">
                 <h4 class="quiz-body-subhead">Check out some of our quizzes below!</h4>
@@ -55,7 +55,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta">Take the quiz!</a>
+                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
 
@@ -66,7 +66,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta">Take the quiz!</a>
+                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
 
@@ -77,7 +77,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta">Take the quiz!</a>
+                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
 
@@ -88,7 +88,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta">Take the quiz!</a>
+                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
 
@@ -99,7 +99,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta">Take the quiz!</a>
+                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
                 </div>
@@ -108,6 +108,25 @@
         </div>
 
         <!-- Quiz home body ends  -->
+
+        <footer class="footer">
+            <ul class="footer-socials-list">
+                <li>
+                    <a class="footer-links" href="https://www.github.com/tanveertkd" target="_blank"><i class="fab fa-github fa-lg social-icn"></i></a>
+                </li>
+                <li>
+                    <a class="footer-links" href="https://www.linkedin.com/in/tanveer-hazarika/" target="_blank"><i class="fab fa-linkedin fa-lg social-icn"></i></a>
+                </li>
+                <li>
+                    <a class="footer-links" href="https://twitter.com/HazarikaTanveer" target="_blank"><i class="fab fa-twitter fa-lg social-icn"></i></a>
+                </li>
+    
+                <li>
+                    <a class="footer-links" href="https://tanveerswebsite.netlify.app/" target="_blank"><i class="fas fa-globe fa-lg social-icn"></i></a>
+                </li>
+            </ul>
+        </footer>
+        
     </div>
 </body>
 </html>
