style: fixed minor style bugs

--- a/routes/rules.html
+++ b/routes/rules.html
@@ -45,10 +45,10 @@
         <!-- Primary Navigation Ends -->
 
         <!-- Rule Body -->
-        <div class="quiz-body">
+        <div class="rule-body">
             <h2>Rules</h2>
 
-            <ol class="rule-list-ul">
+            <ol class="rule-list-ol">
                 <li class="rule">
                     There are a total of five questions in each quiz.
                 </li>
