feat: added results page

--- a/routes/categories.html
+++ b/routes/categories.html
@@ -25,6 +25,17 @@
                 </li>
             </ul>
 
+            <!-- Nav middle -->
+            <ul class="nav-main-middle nav-main-ul">
+                <li class="nav-main-li">
+                    <label for="nav-main-search" class="nav-item-search">
+                        <i class="fa-solid fa-magnifying-glass nav-main-middle-icn"></i>
+                        <input class="nav-item-search-input" type="text" placeholder="Looking for a quiz?"
+                            name="nav-search" />
+                    </label>
+                </li>
+            </ul>
+
             <!-- Nav right -->
             <ul class="nav-main-right nav-main-ul">
                 <li class="nav-main-li">
@@ -69,7 +80,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
+                            <a href="../routes/quizzes/quiz-one/index.html" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
 
@@ -80,7 +91,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
+                            <a href="../routes/quizzes/quiz-one/index.html" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
 
@@ -91,7 +102,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
+                            <a href="../routes/quizzes/quiz-one/index.html" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
 
@@ -102,7 +113,7 @@
                             <p class="quiz-brief">Brief about the quiz</p>
                         </div>
                         <div class="quiz-cta-container">
-                            <a href="#" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
+                            <a href="../routes/quizzes/quiz-one/index.html" class="quiz-cta btn btn-default-outlined">Take the quiz!</a>
                         </div>
                     </div>
                 </div>
