feat: user profile page added along with documentation

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
                 <a href="./routes/categories.html" class="btn-home-cta btn btn-success-solid">Quizzes! &#8594;</a>
 
+                <a href="./routes/user.html" class="btn-home-cta btn btn-primary-outlined">Go To Profile! &#8594;</a>
             </div>
 
         </div>
