--- a/routes/categories.html
+++ b/routes/categories.html
@@ -39,7 +39,7 @@
             <!-- Nav right -->
             <ul class="nav-main-right nav-main-ul">
                 <li class="nav-main-li">
-                    <a href="./routes/login.html" class="nav-main-item nav-btn-login">Login</a>
+                    <a href="./login.html" class="nav-main-item nav-btn-login">Login</a>
                 </li>
                 <li class="nav-main-li">
                     <a class="nav-main-item">
