--- a/routes/quizzes/quiz-one/index.html
+++ b/routes/quizzes/quiz-one/index.html
@@ -196,6 +196,7 @@
                     </div>
                     <div class="btn-submit-quiz">
                         <a href="./result.html" class="btn btn-success-solid quiz-submit-btn">Submit</a>
+                        <a href="../../categories.html" class="btn btn-error-solid quiz-submit-btn">Quit</a>
                     </div>
                 </form>
             </div>
