--- a/routes/user.html
+++ b/routes/user.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
     <!--TI-UI stylesheet-->
-    <!-- <link rel="stylesheet" href="https://ti-ui.netlify.app/css/components.css" /> -->
-    <link rel="stylesheet" href="../../../Macro-Projects/component-lib-ti/css/all.css">
+    <link rel="stylesheet" href="https://ti-ui.netlify.app/css/components.css" />
+    <!-- <link rel="stylesheet" href="../../../Macro-Projects/component-lib-ti/css/all.css"> -->
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
